--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --light-blue: #0F3460;
+  --dark-blue: #1A1A2E;
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
